fixed: webapp content shifting when scrollbar (dis)appears

--- a/server/web/static_content/css/stylesheet.css
+++ b/server/web/static_content/css/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+    width: 100vw;
+}
+
 .btn {
     background-color: ?rgb? !important;
 }
@@ -28,10 +32,11 @@ input:focus {
 body {
     background: ?rgb?;
     transition: ease-in-out .3s;
+    overflow-x: hidden !important;
 }
 
 .animatedGradient{
-    position:relative;
+    position: relative;
 }
   
 .animatedGradient:after, .animatedGradient:before{
@@ -75,6 +80,7 @@ nav {
     will-change: transform, opacity;
     backface-visibility: hidden;
     perspective: 1000;
+    width: 100vw;
 }
 
 nav .brand-logo img {
@@ -160,12 +166,12 @@ body.switching-activity {
 #activity.mid {
     transition: 0s !important;
     opacity: 0;
-    transform: scale(1.05);
+    transform: scale(1.1);
 }
 
 #activity.out {
     transition: ease-in .15s;
-    transform: scale(.97);
+    transform: scale(.95);
     opacity: 0;
 }
 /* END ACTIVITY-ANIMATION */
